fixed bext practice overflow

--- a/assets/styles/aspect-page-best-practice.css
+++ b/assets/styles/aspect-page-best-practice.css
@@ -1,5 +1,11 @@
  /* styling for the best practices of aspect */
 
+.best-practice-container {
+    max-width: 1200px;
+    margin: 0 8em;
+    margin-bottom: 150px;
+}
+
  .best-practice {
     width: 100%;
     display: flex;
@@ -70,7 +76,19 @@
     line-height: 1.5em;
 }
 
+@media screen and (max-width: 1000px) {
+    .best-practice-container {
+        margin: 0 6%;
+        margin-bottom: 80px;
+    }
+}
+
 @media screen and (max-width: 800px) {
+    .best-practice-container {
+        margin: 0 20px;
+        margin-bottom: 80px;
+    }
+
     .best-practice-outer {
         flex-direction: column;
     }
