--- a/assets/styles/aspect-page-intro.css
+++ b/assets/styles/aspect-page-intro.css
@@ -55,7 +55,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 180px;
 }
 
 .evaluation-container {
@@ -66,6 +65,7 @@
     justify-content: center;
     align-items: center;
     margin: 0 8em;
+    margin-bottom: 180px;
 }
 
 .evaluation-grid {
@@ -138,12 +138,10 @@
 
 /* responsive design for smaller screen sizes */
 @media screen and (max-width: 1240px) {
-    .center-container {
-        margin-bottom: 130px;
-    }
     
     .evaluation-container {
         margin: 0 6%;
+        margin-bottom: 130px;
     }
     
     .evaluation-grid {
@@ -217,6 +215,7 @@
 
     .evaluation-container {
         margin: 0 20px;
+        margin-bottom: 130px;
     }
 
 }
